manifests/dev/kavita/Service-kavita.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/name: kavita
  type: ClusterIP
